Finish the Jest cases

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "license": "MIT",
   "description": "",
   "scripts": {
-    "start": "webpack serve",
+    "start": "dotenv -e .env webpack serve",
     "build": "webpack",
-    "test": "jest"
+    "test": "jest --maxWorkers=50% --coverage",
+    "test:watch": "jest --watch --maxWorkers=25%",
+    "test:ci": "jest --runInBand"
   },
   "eslintConfig": {
     "extends": [
@@ -47,27 +49,39 @@
   "devDependencies": {
     "@babel/core": "latest",
     "@babel/preset-env": "latest",
+    "@babel/preset-react": "latest",
+    "@jest/globals": "latest",
     "@testing-library/jest-dom": "latest",
     "@testing-library/react": "latest",
+    "@testing-library/user-event": "latest",
     "@types/jest": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@types/react-test-renderer": "latest",
+    "@types/testing-library__jest-dom": "latest",
     "autoprefixer": "latest",
+    "babel-jest": "latest",
     "babel-loader": "latest",
     "clean-webpack-plugin": "latest",
     "core-js": "latest",
     "css-loader": "latest",
     "css-minimizer-webpack-plugin": "latest",
+    "dotenv-cli": "latest",
     "eslint": "latest",
     "eslint-config-prettier": "latest",
+    "eslint-plugin-jest-dom": "latest",
     "eslint-plugin-jsx-a11y": "latest",
     "eslint-plugin-prettier": "latest",
     "html-webpack-plugin": "latest",
+    "jest": "latest",
     "jest-environment-jsdom": "latest",
+    "nock": "latest",
     "postcss": "latest",
     "postcss-loader": "latest",
     "postcss-preset-env": "latest",
     "prettier": "latest",
+    "react-test-renderer": "latest",
+    "sinon": "latest",
     "source-map-loader": "latest",
     "style-loader": "latest",
     "ts-jest": "latest",
