--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,12 +26,12 @@
     "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
     "baseUrl": "./" /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
-      "@/*": ["src/*"],
-      "@/types/": ["src/types/*"],
-      "@/styles/": ["src/styles/*"],
-      "@/pages/*": ["src/pages/*"],
-      "@/components/*": ["src/components/*"],
-      "@/utils/*": ["src/utils/*"]
+      // "@/*": ["src/*"],
+      // "@/types/": ["src/types/*"],
+      // "@/styles/": ["src/styles/*"],
+      // "@/pages/*": ["src/pages/*"],
+      // "@/components/*": ["src/components/*"],
+      // "@/utils/*": ["src/utils/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [] /* Allow multiple folders to be treated as one when resolving modules. */,
     "typeRoots": [
@@ -40,7 +40,7 @@
     "types": [
       "node",
       "jest",
-      "@testing-library/jest-dom"
+      // "@testing-library/jest-dom"
     ],                                      /* Specify type package names to be included without being referenced in a source file. */
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     "resolveJsonModule": true /* Enable importing .json files */,
